feat: 선수 list 불러오기 수정